--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@playwright/test": "^1.27.1",
     "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.4",
     "@types/react": "^18.0.17",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
