--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "eslint": "eslint --fix ."
   },
   "dependencies": {
     "moment": "^2.29.4",
@@ -23,9 +24,14 @@
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "jest": "^29.2.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-plugin-linter": "^1.2.0"
+  },
+  "jest": {
+    "testRegex": "(/__tests__/.*|(\\.|/)(test))\\.tsx?$"
   }
 }
