--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-local-storage": "^2.3.6"
   },
   "devDependencies": {
     "@playwright/test": "^1.27.1",
