--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-datepicker": "^4.18.0",
+    "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "use-local-storage": "^2.3.6"
   },
@@ -21,13 +21,14 @@
     "@playwright/test": "^1.38.1",
     "@types/jest": "^29.5.5",
     "@types/node": "^18.18.4",
-    "@types/react": "^18.2.25",
-    "@types/react-datepicker": "^4.15.1",
-    "@types/react-dom": "^18.2.11",
+    "@types/react": "^18.2.28",
+    "@types/react-datepicker": "^4.15.2",
+    "@types/react-dom": "^18.2.13",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "jest": "^29.7.0",
+    "prettier": "3.0.3",
     "typescript": "^4.9.5",
     "vite": "^3.2.7",
     "vite-plugin-linter": "^1.2.0"
