--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -18,14 +18,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js 18.x
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 20.x
       - name: Use pnpm
-        uses: pnpm/action-setup@v2.2.4
+        uses: pnpm/action-setup@v2
         with:
-          version: 7.14.0
+          version: 8
           run_install: |
             - recursive: true
               args: [--frozen-lockfile, --strict-peer-dependencies]
@@ -33,7 +33,7 @@ jobs:
       - name: Build
         run: |
           pnpm install
-          pnpm build --base=/moulin-rouge
+          pnpm build --base=/moulin-rouge/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
