--- a/package.json
+++ b/package.json
@@ -13,23 +13,24 @@
   "dependencies": {
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-datepicker": "^4.8.0",
+    "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "use-local-storage": "^2.3.6"
   },
   "devDependencies": {
-    "@playwright/test": "^1.27.1",
-    "@types/jest": "^29.2.0",
-    "@types/node": "^18.11.4",
-    "@types/react": "^18.0.17",
-    "@types/react-datepicker": "^4.4.2",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
+    "@playwright/test": "^1.38.1",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^18.18.4",
+    "@types/react": "^18.2.28",
+    "@types/react-datepicker": "^4.15.2",
+    "@types/react-dom": "^18.2.13",
+    "@vitejs/plugin-react": "^2.2.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "jest": "^29.2.1",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "jest": "^29.7.0",
+    "prettier": "3.0.3",
+    "typescript": "^4.9.5",
+    "vite": "^3.2.7",
     "vite-plugin-linter": "^1.2.0"
   },
   "jest": {
