--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18.2.28",
     "@types/react-datepicker": "^4.15.2",
     "@types/react-dom": "^18.2.13",
+    "@types/serviceworker": "^0.0.75",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
