--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prettier": "3.0.3",
     "typescript": "^4.9.5",
     "vite": "^3.2.7",
-    "vite-plugin-linter": "^1.2.0"
+    "vite-plugin-linter": "^1.2.0",
+    "vite-plugin-pwa": "^0.16.5"
   },
   "jest": {
     "testRegex": "(/__tests__/.*|(\\.|/)(test))\\.tsx?$"
