--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18.2.28",
     "@types/react-datepicker": "^4.15.2",
     "@types/react-dom": "^18.2.13",
+    "@types/serviceworker": "^0.0.75",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
@@ -31,7 +32,8 @@
     "prettier": "3.0.3",
     "typescript": "^4.9.5",
     "vite": "^3.2.7",
-    "vite-plugin-linter": "^1.2.0"
+    "vite-plugin-linter": "^1.2.0",
+    "vite-plugin-pwa": "^0.16.5"
   },
   "jest": {
     "testRegex": "(/__tests__/.*|(\\.|/)(test))\\.tsx?$"
