--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "eslint --fix ."
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.20.0",
